Added display of results for values tip & total

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,8 @@
-/* Idea create a Tip CalcuGator using a funny background image */
+/* Idea - create a Tip CalcuGator using a funny background image */
+/* #tip {
+	display: block;
+}
+
+#total {
+	display: block;
+} */
