--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,8 +8,8 @@
 } */
 
 h1 {
-	text-align: center;
-	background-color: aqua;
+  text-align: center;
+  background-color: aqua;
 }
 body {
   width: 800px;
@@ -18,6 +18,7 @@ body {
   border-style: dashed;
   border-color: green;
 }
-#gif {
-  background-image: url("https://acegif.com/wp-content/gifs/raining-money-8.gif") ;
+#tip,
+#total {
+  background-image: url("https://acegif.com/wp-content/gifs/raining-money-8.gif");
 }
